<resources>
  <string name="app_name">Pittan</string>
  <!-- Anywhere -->
  <string name="centimeter">cm</string>
  <string name="ok">OK</string>
  <string name="cancel">キャンセル</string>
  <!-- home -->
  <string name="home_menu_item_settings_description">設定ボタン</string>
  <string name="card_image_description">カーテン・ラグの写真</string>
  <string name="add_description">カーテン・ラグの情報を追加する</string>
  <string name="home_top_app_bar_title">設置場所</string>
  <string name="home_user_info">サイズを測りましょう！</string>
  <string name="home_menu_item_settings_title">設定</string>
  <string name="home_size_height_title">縦幅：</string>
  <string name="home_size_width_title">横幅：</string>
  <string name="home_snackbar_action_text">元に戻す</string>
  <!-- add -->
  <string name="add_photo_description">撮影したカーテン・ラグの画像</string>
  <string name="add_photo_info">カーテンの雰囲気</string>
  <string name="add_first_title">設置する場所</string>
  <string name="add_second_title">カテゴリ</string>
  <string name="add_third_title">窓枠のサイズ</string>
  <string name="add_forth_title">コメント</string>
  <string name="add_first_edit_hint">例：子供部屋</string>
  <string name="add_second_edit_first_hint">縦幅 cm</string>
  <string name="add_second_edit_second_hint">横幅 cm</string>
  <string name="add_third_edit_hint">柄、遮光性、こだわり</string>
  <string name="add_segment_description">セグメントコントロール</string>
  <string name="add_segment_first_item">カーテン</string>
  <string name="add_segment_second_item">ラグ</string>
  <string name="add_multiply">×</string>
  <string name="add_menu_item_title">保存</string>
  <string name="add_menu_item_description">入力したデータを保存する</string>
  <!-- detail -->
  <string name="detail_menu_item_title">編集</string>
  <string name="detail_menu_item_description">表示しているデータの編集画面に遷移する</string>
  <string name="detail_size_container_height_title">縦幅</string>
  <string name="detail_size_container_width_title">横幅</string>
  <!-- object installation -->
  <string name="object_installation_image_button_shutter_description">3Dモデルを含んだ写真を撮るボタン</string>
  <string name="object_installation_image_button_close_description">前の画面に戻る</string>
  <string name="object_installation_image_button_delete_description">表示中の3DModelを消す</string>
  <string name="preview_image_button_photo_description">撮影した写真をプレビューする</string>
  <string name="product_menu_image_view_description">3Dモデルのイメージ画像</string>
  <string name="object_installation_tab_title_first">カーテン</string>
  <string name="object_installation_tab_title_second">サイズ</string>
  <string name="object_installation_alert_title">窓枠のサイズ</string>
  <string name="object_installation_preview_button">追加</string>
  <string name="object_installation_texture_name_black">ブラック</string>
  <string name="object_installation_texture_name_blue">ブルー</string>
  <string name="object_installation_texture_name_indigo">インディゴ</string>
  <string name="object_installation_texture_name_greige">グレージュ</string>
  <string name="object_installation_texture_name_iris">杜若色</string>
  <!-- setting -->
  <string name="setting_license">ライセンス表示</string>
  <string name="setting">設定</string>
  <string name="object_installation_preview_loading">Loading...</string>


</resources>