<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/add_main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".ui.add_data.AddDataActivity">

  <!-- Tool　Bar -->
  <com.google.android.material.appbar.AppBarLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/add_top_bar"
        style="@style/Widget.MaterialComponents.Toolbar.Primary"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:menu="@menu/add_top_app_bar"
        app:navigationIcon="@drawable/icon_navigation_back" />
  </com.google.android.material.appbar.AppBarLayout>

  <!--　Contents　-->
  <androidx.core.widget.NestedScrollView
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
      <!-- Photo -->
      <FrameLayout
          android:id="@+id/frame_photo"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginStart="16dp"
          android:layout_marginTop="28dp"
          android:layout_marginEnd="16dp"
          android:background="@drawable/corner_radius_photo_not_input"
          android:minHeight="182dp">

        <TextView
            android:id="@+id/text_view_photo_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/add_photo_info"
            android:textColor="@color/base_color"
            android:textSize="24sp"
            android:textStyle="bold"
            app:drawableStartCompat="@drawable/icon_camera" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:cardCornerRadius="4dp">

          <ImageView
              android:id="@+id/add_image_view_user_photo"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@drawable/corner_radius_photo_input"
              android:contentDescription="@string/add_photo_description"
              android:scaleType="fitXY"
              android:src="@drawable/sample_curtain" />
        </androidx.cardview.widget.CardView>

      </FrameLayout>
      <!-- Installation Location -->
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="16dp"
          android:layout_marginTop="40dp"
          android:text="@string/add_first_title"
          android:textColor="@color/black"
          android:textSize="20sp"
          android:textStyle="bold" />

      <com.google.android.material.textfield.TextInputLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginStart="16dp"
          android:layout_marginTop="14dp"
          android:layout_marginEnd="16dp"
          android:hint="@string/add_first_edit_hint"
          app:boxBackgroundColor="@null"
          app:boxBackgroundMode="filled">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_view_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/transparent" />

      </com.google.android.material.textfield.TextInputLayout>
      <!--　Category　-->
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="16dp"
          android:layout_marginTop="28dp"
          android:text="@string/add_second_title"
          android:textColor="@color/black"
          android:textSize="20sp"
          android:textStyle="bold" />
      <!-- Segmented Controller -->
      <com.google.android.material.button.MaterialButtonToggleGroup
          android:id="@+id/segmented_controller"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginStart="16dp"
          android:layout_marginTop="14dp"
          android:layout_marginEnd="16dp"
          android:contentDescription="@string/add_segment_description"
          android:elevation="50dp"
          android:orientation="horizontal"
          app:checkedButton="@+id/button_curtain"
          app:singleSelection="true">

        <Button
            android:id="@+id/button_curtain"
            style="@style/SegmentedController.Item"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add_segment_first_item"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button_rug"
            style="@style/SegmentedController.Item"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add_segment_second_item"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

      </com.google.android.material.button.MaterialButtonToggleGroup>

      <!-- Size -->
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="16dp"
          android:layout_marginTop="28dp"
          android:text="@string/add_third_title"
          android:textColor="@color/black"
          android:textSize="20sp"
          android:textStyle="bold" />

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginStart="16dp"
          android:layout_marginTop="14dp"
          android:layout_marginEnd="16dp"
          android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:hint="@string/add_second_edit_first_hint"
            app:boxBackgroundColor="@null"
            app:boxBackgroundMode="filled">

          <com.google.android.material.textfield.TextInputEditText
              android:id="@+id/edit_view_size_height"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:backgroundTint="@android:color/transparent" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.1"
            android:gravity="center"
            android:text="@string/add_multiply"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:hint="@string/add_second_edit_second_hint"
            app:boxBackgroundColor="@null"
            app:boxBackgroundMode="filled">

          <com.google.android.material.textfield.TextInputEditText
              android:id="@+id/edit_view_size_width"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:backgroundTint="@android:color/transparent" />

        </com.google.android.material.textfield.TextInputLayout>

      </LinearLayout>

      <!-- Comments -->
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="16dp"
          android:layout_marginTop="28dp"
          android:text="@string/add_forth_title"
          android:textColor="@color/black"
          android:textSize="20sp"
          android:textStyle="bold" />

      <com.google.android.material.textfield.TextInputLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginStart="16dp"
          android:layout_marginTop="14dp"
          android:layout_marginEnd="16dp"
          android:layout_marginBottom="16dp"
          android:hint="@string/add_third_edit_hint"
          app:boxBackgroundColor="@null"
          app:boxBackgroundMode="filled">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_view_comments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/transparent" />

      </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

  </androidx.core.widget.NestedScrollView>

</LinearLayout>