<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.detail.DetailActivity">

  <!-- Tool　Bar -->
  <com.google.android.material.appbar.AppBarLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/add_top_bar"
        style="@style/Widget.MaterialComponents.Toolbar.Primary"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:menu="@menu/detail_top_app_bar"
        app:navigationIcon="@drawable/icon_navigation_back" />
  </com.google.android.material.appbar.AppBarLayout>

  <!-- Container -->

  <androidx.core.widget.NestedScrollView
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

      <!-- photoFrame -->
      <FrameLayout
          android:id="@+id/detail_frame_photo"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginStart="16dp"
          android:layout_marginTop="20dp"
          android:layout_marginEnd="16dp"
          android:background="@drawable/corner_radius_detail_size_container"
          android:minHeight="182dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/base_color"
            android:textSize="24sp"
            android:textStyle="bold"
            app:drawableStartCompat="@drawable/icon_camera" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible"
            app:cardCornerRadius="4dp">

          <ImageView
              android:id="@+id/detail_image_view_item_photo"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@drawable/corner_radius_photo_input"
              android:contentDescription="@string/add_photo_description"
              android:scaleType="fitXY"
              android:src="@drawable/sample_curtain" />
        </androidx.cardview.widget.CardView>
      </FrameLayout>

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginStart="16dp"
          android:layout_marginTop="24dp"
          android:layout_marginEnd="16dp"
          android:orientation="horizontal"
          android:paddingTop="8dp"
          android:paddingBottom="8dp">

        <TextView
            android:id="@+id/detail_text_view_item_place_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:gravity="start|center_horizontal"
            android:textColor="@color/black"
            android:textSize="28sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/detail_text_view_item_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/corner_radius_tag"
            android:padding="8dp"
            android:text="@string/add_segment_first_item"
            android:textStyle="bold" />
      </LinearLayout>

      <!-- window size -->
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="16dp"
          android:layout_marginTop="28dp"
          android:text="@string/add_third_title"
          android:textColor="@color/black"
          android:textSize="20sp"
          android:textStyle="bold" />

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginStart="16dp"
          android:layout_marginTop="16dp"
          android:layout_marginEnd="16dp"
          android:background="@drawable/corner_radius_detail_size_container"
          android:minHeight="100dp"
          android:orientation="vertical">

        <!-- 縦幅　-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="49dp"
            android:orientation="horizontal">

          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_gravity="center"
              android:layout_marginStart="8dp"
              android:text="@string/detail_size_container_height_title"
              android:textSize="20sp"
              android:textStyle="bold" />

          <TextView
              android:id="@+id/detail_text_view_item_height"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_gravity="center"
              android:layout_marginStart="8dp"
              android:layout_marginEnd="8dp"
              android:gravity="end"
              android:textSize="20sp"
              android:textStyle="bold" />


        </LinearLayout>

        <!-- 中央線 -->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#979797" />

        <!-- 横幅　-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="49dp"
            android:orientation="horizontal">

          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_gravity="center"
              android:layout_marginStart="8dp"
              android:text="@string/detail_size_container_width_title"
              android:textSize="20sp"
              android:textStyle="bold" />

          <TextView
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_gravity="center"
              android:layout_marginStart="8dp"
              android:layout_marginEnd="8dp"
              android:gravity="end"
              android:textSize="20sp"
              android:textStyle="bold" />

        </LinearLayout>

      </LinearLayout>

      <!-- コメント -->
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="16dp"
          android:layout_marginTop="28dp"
          android:text="@string/add_forth_title"
          android:textColor="@color/black"
          android:textSize="20sp"
          android:textStyle="bold" />

      <TextView
          android:id="@+id/detail_text_view_comments_area"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginStart="16dp"
          android:layout_marginTop="16dp"
          android:layout_marginEnd="16dp"
          android:layout_marginBottom="12dp"
          android:textSize="20sp"
          android:minHeight="100dp" />


    </LinearLayout>

  </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>