<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp"
    app:cardMaxElevation="4dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true"
    android:id="@+id/card_view">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal">

    <ImageView
        android:id="@+id/home_image_view_data_photo"
        android:layout_width="0dp"
        android:layout_height="180dp"
        android:layout_margin="10dp"
        android:layout_weight="0.4"
        android:contentDescription="@string/card_image_description"
        android:scaleType="fitXY"
        android:src="@drawable/sample_curtain"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.5"
        android:orientation="vertical">

      <TextView
          android:id="@+id/text_view_data_title"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="8dp"
          android:padding="4dp"
          android:textAlignment="viewStart"
          android:textSize="28sp"
          android:textStyle="bold" />

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal"
          android:padding="4dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:text="@string/home_size_height_title"
            android:textAlignment="viewStart"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_view_data_height"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:textAlignment="viewStart"
            android:textSize="20sp"
            android:textStyle="bold" />
      </LinearLayout>

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal"
          android:padding="4dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:text="@string/detail_size_container_width_title"
            android:textAlignment="viewStart"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_view_data_width"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:textAlignment="viewStart"
            android:textSize="20sp"
            android:textStyle="bold" />
      </LinearLayout>

      <TextView
          android:id="@+id/text_view_data_category"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="end"
          android:layout_marginTop="28dp"
          android:layout_marginEnd="8dp"
          android:background="@drawable/corner_radius_tag"
          android:padding="8dp"
          android:textStyle="bold"
          android:gravity="center"
          android:minWidth="76dp"/>

    </LinearLayout>

  </LinearLayout>

</androidx.cardview.widget.CardView>